qt: add missing include for QPainterPath

The include is not transitively included anymore with Qt 5.15.

Original contribution of menaquinone from ticket #24882.

Fix #24882, #25059